# pharma_RD_workflow

./: .cursorrules
pharma_rd/: .env.example  .gitignore  README.md  pyproject.toml
pharma_rd/pharma_rd/: __init__.py  __main__.py  access_control.py  cli.py  config.py  http_client.py  logging_setup.py  main.py  operator_queries.py  scheduler.py
pharma_rd/pharma_rd/agents/: __init__.py  clinical.py  competitor.py  connector_probe.py  consumer.py  delivery.py  synthesis.py
pharma_rd/pharma_rd/integrations/: __init__.py  clinical_publications_fixture.py  consumer_feedback.py  insight_report_html.py  internal_research.py  openai_client.py  openai_clinical.py  openai_competitor.py  openai_consumer.py  openai_report_delivery.py  openai_synthesis.py  pharmacy_sales.py  pubmed.py  regulatory_signals.py  report_distribution.py  report_docx.py  report_executive_framing.py  report_html_sanitize.py  report_pdf.py  slack_insight_notification.py  slack_pdf_upload.py  unmet_need_demand.py
pharma_rd/pharma_rd/persistence/: __init__.py  artifacts.py  db.py  repository.py
pharma_rd/pharma_rd/pipeline/: __init__.py  contracts.py  order.py  resume_validation.py  runner.py
pharma_rd/pharma_rd/readability/: __init__.py  insight_report.py
pharma_rd/tests/: conftest.py  test_access_control.py  test_cli.py  test_config.py  test_http_client.py  test_operator_cli.py  test_scheduler.py  test_smoke.py
pharma_rd/tests/agents/: test_clinical.py  test_competitor.py  test_consumer.py  test_delivery.py  test_synthesis.py
pharma_rd/tests/integrations/: test_clinical_publications_fixture.py  (+9 more)
(+69 files in other folders)
